cmake_minimum_required(VERSION 3.5)
project(Mi4Pd)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm" OR CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
    if (NOT APPLE)
        message(STATUS "Target is ARM or Apple")
    else()
        add_definitions(-DTEST)
    endif()
else()
    message(STATUS "Not ARM build is experimental")
    add_definitions(-DTEST)
endif()

add_subdirectory(mi)
set_target_properties(MILib PROPERTIES POSITION_INDEPENDENT_CODE ON)
include_directories(mi)


# add_pd_external(grds~ grds~ "${CMAKE_CURRENT_SOURCE_DIR}/grds/grids.cpp" LINK_LIBRARIES MILib)
# target_compile_definitions(grds~ PRIVATE _USE_MATH_DEFINES) # if you enable it later

add_pd_external(brds_tilde brds~ "${CMAKE_CURRENT_SOURCE_DIR}/brds/brds~.cpp")
target_link_libraries(brds_tilde PRIVATE MILib)
add_pd_external(clds_tilde clds~ "${CMAKE_CURRENT_SOURCE_DIR}/clds/clds~.cpp")
target_link_libraries(clds_tilde PRIVATE MILib)
add_pd_external(clds_reverb_tilde clds_reverb~ "${CMAKE_CURRENT_SOURCE_DIR}/clds_reverb/clds_reverb~.cpp")
target_link_libraries(clds_reverb_tilde PRIVATE MILib)
add_pd_external(lmnts_tilde lmnts~ "${CMAKE_CURRENT_SOURCE_DIR}/lmnts/lmnts~.cpp")
target_link_libraries(lmnts_tilde PRIVATE MILib)
add_pd_external(rngs_tilde rngs~ "${CMAKE_CURRENT_SOURCE_DIR}/rngs/rngs~.cpp")
target_link_libraries(rngs_tilde PRIVATE MILib)
add_pd_external(rngs_chorus_tilde rngs_chorus~ "${CMAKE_CURRENT_SOURCE_DIR}/rngs_chorus/rngs_chorus~.cpp")
target_link_libraries(rngs_chorus_tilde PRIVATE MILib)
add_pd_external(rngs_ensemble_tilde rngs_ensemble~ "${CMAKE_CURRENT_SOURCE_DIR}/rngs_ensemble/rngs_ensemble~.cpp")
target_link_libraries(rngs_ensemble_tilde PRIVATE MILib)
add_pd_external(rngs_reverb_tilde rngs_reverb~ "${CMAKE_CURRENT_SOURCE_DIR}/rngs_reverb/rngs_reverb~.cpp")
target_link_libraries(rngs_reverb_tilde PRIVATE MILib)
add_pd_external(wrps_tilde wrps~ "${CMAKE_CURRENT_SOURCE_DIR}/wrps/wrps~.cpp")
target_link_libraries(wrps_tilde PRIVATE MILib)

add_compile_definitions(_USE_MATH_DEFINES)
